trying to fix overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 }
 
 :root {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 body {
